# webscale-multimodal-datapipeline

./: .gitignore  CLAUDE.md  Cargo.toml  METRICS_IMPLEMENTATION.md  README.md  benchmark_image_technical_quality.py  pipeline_config.yaml  pyproject.toml  test_commoncrawl_loader.py  test_file_loader.py  test_image_aesthetic_quality.py  test_image_technical_quality.py  test_loader_performance.py
benchmarks/: __init__.py  benchmark_image_technical_quality.py
configs/: example_commoncrawl.yaml  example_distributed_loading.yaml  example_with_metrics.yaml  example_with_report.yaml  test_dynamic_workers.yaml  test_file_loader.yaml  z_image.yaml
examples/: metrics_example.py
mega_data_factory/framework/: base.py  config.py  executor.py  loader_worker.py
mega_data_factory/framework/metrics/: QUICKSTART.md  README.md  __init__.py  aggregator.py  collector.py  models.py  reporter.py  writer.py
mega_data_factory/framework/metrics/templates/: report.html.jinja2
mega_data_factory/loaders/: __init__.py  commoncrawl_loader.py  huggingface_loader.py
mega_data_factory/operators/dedup/: __init__.py  text_exact_dedup.md  text_exact_dedup.py
models/: train_image_quality_assessment.py
models/image_quality_assessment/: README.md  __init__.py  inference.py  multihead_quality_model.pth  synthetic_data.py  trainer.py
operators/dedup/: __init__.py  image_phash_dedup.py
operators/filters/: __init__.py  image_quality_filter.py
operators/refiners/: __init__.py  image_aesthetic_quality.py  image_metadata.py  image_technical_quality.py  image_visual_degradations.py
rust/: test.py
rust/src/: lib.rs
scripts/: distributed_train.py  train_image_aigc_detector.py  train_image_quality_assessment.py  train_kmeans.py
src/: text_ops.rs
tests/: __init__.py  test_image_aesthetic_quality.py  test_image_technical_quality.py  test_metrics.py  test_rust_accelerated_ops.py
webscale_multimodal_datapipeline/: __init__.py  cli.py
webscale_multimodal_datapipeline/framework/: __init__.py  backend.py  base.py  config.py  executor.py  operator.py  registry.py  worker.py
webscale_multimodal_datapipeline/loaders/: __init__.py  huggingface_loader.py
webscale_multimodal_datapipeline/models/: README.md  __init__.py
webscale_multimodal_datapipeline/models/classifier/: __init__.py  trainer.py
webscale_multimodal_datapipeline/models/image_aigc_detector/: README.md  __init__.py  synthetic_data.py  trainer.py
webscale_multimodal_datapipeline/models/kmeans/: README.md  __init__.py  distributed_trainer.py  inference.py  trainer.py
webscale_multimodal_datapipeline/operators/: __init__.py
webscale_multimodal_datapipeline/operators/dedup/: __init__.py  image_phash_dedup.md  image_phash_dedup.py
webscale_multimodal_datapipeline/operators/filters/: __init__.py  image_quality_filter.md  image_quality_filter.py
webscale_multimodal_datapipeline/operators/refiners/: __init__.py  image_aesthetic_quality.md  image_aesthetic_quality.py  image_aigc_detector.md  image_aigc_detector.py  image_clip_embedding.md  image_clip_embedding.py  image_metadata.md  image_metadata.py  image_siglip_embedding.md  image_siglip_embedding.py  image_technical_quality.md  image_technical_quality.py  image_visual_degradations.md  image_visual_degradations.py
webscale_multimodal_datapipeline/writers/: __init__.py  iceberg_writer.py  parquet_writer.py
